--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,17 @@
     <title>Number Droping effect</title>
     <link rel="stylesheet" href="static/style.css">
 </head>
-<body> 
-    <div class="number_effect" abc="0">1000</div>
-    <h1>number effect</h1>
-    
+
+<body>
+    <div class="container">
+        <div class="content">
+            <h1>Number droping effect...</h1>
+            <div class="number_effect" abc="0">100</div>
+        </div>
+    </div>
+
+
 </body>
 <script src="static/script.js"></script>
+
 </html>
