--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <hr>
 <a href="numberDropingEffect.html">Number Droping Effect</a>
   <br>
-  <a href="addBox.html">addBox</a>
+  <a href="addbox.html">addBox</a>
 
 </body>
 </html>
