--- a/addbox.html
+++ b/addbox.html
@@ -19,7 +19,7 @@ function creat() {
   
   let element = document.createElement("div");
  
-  
+  element.style.display ="inline-block";
    randomcolor = random_hex_color_code();
   element.style.backgroundColor =randomcolor;
   
